@@ -35,7 +35,7 @@
 </node>
 </node>
 <node CREATED="1181913500796" HGAP="36" ID="Freemind_Link_1341023493" MODIFIED="1182130626328" POSITION="right" TEXT="Availability"/>
-<node CREATED="1181914252578" HGAP="28" ID="Freemind_Link_1348227894" MODIFIED="1181917122421" POSITION="left" TEXT="Elements" VSHIFT="-32">
+<node CREATED="1181914252578" HGAP="29" ID="Freemind_Link_1348227894" MODIFIED="1182475801000" POSITION="left" TEXT="Elements" VSHIFT="-53">
 <node CREATED="1181914265031" ID="Freemind_Link_1983361608" MODIFIED="1181914308265" TEXT="Database Records" VSHIFT="-6">
 <node CREATED="1181914316671" ID="Freemind_Link_1260678099" MODIFIED="1181914318406" TEXT="Pages"/>
 <node CREATED="1181914320718" ID="Freemind_Link_1634212434" MODIFIED="1181914322609" TEXT="Logs"/>
@@ -97,6 +97,62 @@
 <font BOLD="true" NAME="SansSerif" SIZE="12"/>
 <node CREATED="1182130579343" HGAP="29" ID="Freemind_Link_592188347" MODIFIED="1182130591031" TEXT="Cron Job" VSHIFT="16"/>
 <node CREATED="1182130640296" ID="Freemind_Link_1553348860" MODIFIED="1182130642843" TEXT="PHP scripts"/>
+</node>
+<node CREATED="1182475734515" ID="Freemind_Link_1232904290" MODIFIED="1182475745015" POSITION="right" TEXT="Architecture 2" VSHIFT="56">
+<node CREATED="1182475751531" HGAP="26" ID="Freemind_Link_430824671" MODIFIED="1182528936484" TEXT="Transaction sent to Primary &amp; Secondary" VSHIFT="16"/>
+</node>
+<node CREATED="1182475866953" HGAP="26" ID="Freemind_Link_412749586" MODIFIED="1182475872671" POSITION="left" TEXT="Operations" VSHIFT="38">
+<node CREATED="1182475873734" ID="Freemind_Link_1781094716" MODIFIED="1182475875843" TEXT="Page">
+<node CREATED="1182475877046" ID="Freemind_Link_1945948084" MODIFIED="1182475879062" TEXT="Creation"/>
+<node CREATED="1182475879906" ID="Freemind_Link_802798637" MODIFIED="1182475883546" TEXT="Update"/>
+<node CREATED="1182475884531" ID="Freemind_Link_612826162" MODIFIED="1182475886078" TEXT="Deletion">
+<node CREATED="1182475984812" ID="Freemind_Link_182315495" MODIFIED="1182475986859" TEXT="Revision">
+<node CREATED="1182475987984" ID="Freemind_Link_1138163906" MODIFIED="1182475989812" TEXT="Rev X"/>
+<node CREATED="1182475990250" ID="Freemind_Link_1215952564" MODIFIED="1182475991156" TEXT="All"/>
+</node>
+</node>
+<node CREATED="1182475888625" ID="Freemind_Link_701510506" MODIFIED="1182475889593" TEXT="Move"/>
+<node CREATED="1182476002531" ID="Freemind_Link_1336218182" MODIFIED="1182476005031" TEXT="Rollback"/>
+<node CREATED="1182475906843" ID="Freemind_Link_1394134908" MODIFIED="1182475909093" TEXT="Refresh">
+<node CREATED="1182475910390" ID="Freemind_Link_109703659" MODIFIED="1182475917515" TEXT="Refresh Links">
+<node CREATED="1182475918375" ID="Freemind_Link_771271187" MODIFIED="1182475921234" TEXT="Categories"/>
+<node CREATED="1182475921546" ID="Freemind_Link_1142136168" MODIFIED="1182475923140" TEXT="Templates"/>
+</node>
+</node>
+</node>
+<node CREATED="1182475938937" ID="Freemind_Link_126297699" MODIFIED="1182475940359" TEXT="File">
+<node CREATED="1182475942390" ID="Freemind_Link_1808475088" MODIFIED="1182475944031" TEXT="Creation"/>
+<node CREATED="1182475944859" ID="Freemind_Link_1902786924" MODIFIED="1182475945953" TEXT="Update"/>
+<node CREATED="1182475946828" ID="Freemind_Link_1365266351" MODIFIED="1182475948296" TEXT="Deletion">
+<node CREATED="1182475970031" ID="Freemind_Link_74787129" MODIFIED="1182475972812" TEXT="Revision">
+<node CREATED="1182475973640" ID="Freemind_Link_1670090906" MODIFIED="1182475978968" TEXT="Rev X"/>
+<node CREATED="1182475979703" ID="Freemind_Link_1765491405" MODIFIED="1182475981421" TEXT="All"/>
+</node>
+</node>
+<node CREATED="1182475948796" ID="Freemind_Link_451856096" MODIFIED="1182475949859" TEXT="Move"/>
+<node CREATED="1182476007578" ID="Freemind_Link_1495952756" MODIFIED="1182476009234" TEXT="Rollback"/>
+<node CREATED="1182475950937" ID="Freemind_Link_1690683984" MODIFIED="1182475954062" TEXT="Refresh"/>
+</node>
+<node CREATED="1182528614812" HGAP="30" ID="Freemind_Link_1255172860" MODIFIED="1182528795671" TEXT="User" VSHIFT="18">
+<node CREATED="1182528617625" ID="Freemind_Link_1949132067" MODIFIED="1182528619515" TEXT="Create"/>
+<node CREATED="1182528620265" ID="Freemind_Link_1283352821" MODIFIED="1182528621546" TEXT="Delete"/>
+<node CREATED="1182528623000" ID="Freemind_Link_636048982" MODIFIED="1182528626781" TEXT="Rename?"/>
+<node CREATED="1182528630000" ID="Freemind_Link_1077404078" MODIFIED="1182528631265" TEXT="Update"/>
+<node CREATED="1182544315843" ID="Freemind_Link_1425755341" MODIFIED="1182544319343" TEXT="Watchlist related">
+<node CREATED="1182544320406" ID="Freemind_Link_805721628" MODIFIED="1182544325500" TEXT="Add"/>
+<node CREATED="1182544326265" ID="Freemind_Link_298956960" MODIFIED="1182544328062" TEXT="Delete"/>
+</node>
+</node>
+<node CREATED="1182528768703" ID="Freemind_Link_1109116219" MODIFIED="1182528792421" TEXT="Group" VSHIFT="16">
+<node CREATED="1182528774171" ID="Freemind_Link_1788702475" MODIFIED="1182528777312" TEXT="Create"/>
+<node CREATED="1182528778171" ID="Freemind_Link_1186548954" MODIFIED="1182528779843" TEXT="Delete"/>
+<node CREATED="1182528781109" ID="Freemind_Link_1795717367" MODIFIED="1182528782593" TEXT="Rename?"/>
+<node CREATED="1182528783562" ID="Freemind_Link_1436863670" MODIFIED="1182528787625" TEXT="Update"/>
+<node CREATED="1182528821968" ID="Freemind_Link_1366178293" MODIFIED="1182528831125" TEXT="User Related">
+<node CREATED="1182528832203" ID="Freemind_Link_1635351595" MODIFIED="1182528834093" TEXT="Add User"/>
+<node CREATED="1182528835187" ID="Freemind_Link_407812501" MODIFIED="1182528837093" TEXT="Delete User"/>
+</node>
+</node>
 </node>
 </node>
 </map>
